<resources>
    <string name="app_name">MatteKatt</string>

    <string name="start_game">▶</string>

    <string name="statistics">Se statistikk</string>

    <string name="preferences">Preferanser</string>

    <string name="statistics_headline">Sammenlagt poengsum</string>
    <string name="delete_stats">Slett statistikk</string>

    <string name="five_q_game">5 spørsmål</string>
    <string name="ten_q_game">10 spørsmål</string>
    <string name="fifteen_q_game">15 spørsmål</string>

    <string name="preference_length">Antall spørsmål</string>
    <string name="preference_language">Språk</string>
    <string name="preference_headline">Preferanser</string>
    <string name="lang_no">Norsk</string>
    <string name="lang_de">Tysk</string>
    <string name="lang_explanation">Velg språk</string>
    <string name="length_explanation" >Velg antall spørsmål</string>
    <string name="cancel">Avbryt</string>

    <string name="correct">Riktige</string>
    <string name="wrong">Feil</string>

    <string name="sp_key_language" translatable="false">language</string>
    <string name="sp_key_length" translatable="false">length</string>

    <string name="ok" translatable="false">Ok!</string>
    <string name="ikkeok" translatable="false">Denne strengen er IKKE ok</string>

    <string name="welcome">Velkommen!</string>
    <string name="pressEnterToPlay">Trykk på den grønne knappen for å starte!</string>
    <string name="finished">Trykk på den grønne knappen for å spille enda en runde!</string>
    <string name="finished_heading">Ferdig!</string>
    <string name="yourscore">Din score ble: </string>
    <string name="abortwarning">Sikker på du vil avbryte?\nVed avbrytelse lagres ikke spillet.</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="outOfQuestions">Du er tom for spørsmål</string>
    <string name="enterToContinue">"Trykk på den grønne knappen for å fortsette!"</string>
    <string name="notEnoughQuestions_1">Du har bare</string>
    <string name="notEnoughQuestions_2">spørsmål igjen!</string>
    <string name="intro_text">Velkommen til Mattekatt!\n Her kan du øve deg på addering!\nTrykk på den grønne knappen for å starte!</string>

    <string name="title">MatteKatt</string>
    <string name="subtitle">Lær addisjon!</string>
    <string name="bad_job">Runde ferdig!</string>
    <string name="good_job">Godt spilt!</string>
    <string name="great_job">Bra jobba!</string>
    <string name="perfect_job">Alt rett!! Supert!</string>
    <string name="delete_warning">Er du sikker?\nAll statistikk vil bli slettet!</string>


</resources>